# opendmarc-unafraid

./: AutoBuild.sh  CMakeLists.txt  RELEASE_NOTES
libopendmarc/: opendmarc_internal.h  opendmarc_policy.c  opendmarc_spf.c  opendmarc_tld.c
opendmarc/: opendmarc-config.h  opendmarc.c  opendmarc.conf.5.in  opendmarc.conf.sample  opendmarc.h
reports/: opendmarc-reports.in
